change role name

--- a/src/app/modules/core/components/navbar/navbar.component.html
+++ b/src/app/modules/core/components/navbar/navbar.component.html
@@ -11,7 +11,7 @@
     <mat-list-item role="listitem">
       <div class="d-flex flex-column align-items-center justify-content-around">
         <span class="font-18">{{ user.NameEn }}</span>
-        <span>({{ lang === 'en' ? user.RoleNameEn : user.RoleNameAr }})</span>
+        <span>({{ lang === 'en' ? user.RoleEn : user.RoleAr }})</span>
       </div>
     </mat-list-item>
     <mat-list-item role="listitem">
